/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id("buildlogic.java-application-conventions")
}

repositories {
    mavenCentral()
}

run {
    standardInput = System.in
}

dependencies {
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'org.openjfx:javafx-controls:18.0.1'
    implementation 'org.openjfx:javafx-fxml:18.0.1'
    implementation project(':api')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "22.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'it.unicam.cs.mpmgc.vectorrally.app.GraphicalApp'
}

tasks.register('wrapper', Wrapper) {
    gradleVersion = '7.2'
}

tasks.register('prepareKotlinBuildScriptModel') {

}
